<resources>
    <string name="app_name">ParkingApp</string>
    <string name="title_activity_maps">My App</string>
    <string name="bLogin">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="name">Name</string>
    <string name="map">Map</string>
    <string name="add_location">Add Location</string>
    <string name="settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_time">Select Time</string>
    <string name="from">From</string>
    <string name="choose_your_hourly_rate">Choose you hourly rate</string>
    <string name="what_days_are_available_for_rent">What days are available for rent</string>
    <string name="to">Till</string>
    <string name="_0">0.00$/h</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="login">Login</string>
    <string name="next">Next</string>
    <string name="checkmark">checkmark</string>
    <string name="success">Success!</string>
    <string name="thank_you_for_using_parkingapp_your_spot_has_been_added_succesfully">Thank you for using ParkingApp. Your spot has been added succesfully</string>
    <string name="ok">Ok</string>
    <string name="register">Register</string>
    <string name="app_logo">App Logo</string>
    <string name="pref_logout">logout</string>
    <string name="pref_manage">manage</string>
    <string name="cancel">Cancel</string>

    <!-- Strings related to login -->
</resources>
