<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground"
    tools:context=".fragments.AddLocationFragment" tools:layout_editor_absoluteY="81dp">

    <TextView
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:text="@string/what_days_are_available_for_rent"
        android:ems="10"
        android:id="@+id/tv_days_available"
        android:background="@null"
        android:textSize="22sp"
        android:layout_above="@id/address_layout"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/address_layout" android:layout_marginStart="4dp"
        app:layout_constraintStart_toStartOf="@+id/address_layout" android:layout_marginLeft="4dp"/>
    <TextView
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_hourly_rate"
        android:ems="10"
        android:id="@+id/tv_days_available6"
        android:background="@null"
        android:textSize="22sp"
        android:layout_above="@id/address_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.093"/>

    <TextView
        android:id="@+id/tv_days_availible2"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/address_layout"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="188dp"
        android:background="@null"
        android:ems="10"
        android:text="@string/from"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/tv_days_available" />

    <TextView
        android:id="@+id/tv_from_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/address_layout"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/select_time"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toEndOf="@+id/tv_days_availible2"
        app:layout_constraintTop_toTopOf="@+id/tv_days_availible2" />

    <TextView
        android:id="@+id/tv_to_time"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/address_layout"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/select_time"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_days_availible3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toEndOf="@+id/tv_days_availible3"
        app:layout_constraintTop_toBottomOf="@+id/tv_from_time"
        app:layout_constraintVertical_bias="0.125" />

    <TextView
        android:id="@+id/tv_days_availible3"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/address_layout"
        android:layout_marginTop="12dp"
        android:background="@null"
        android:ems="10"
        android:text="@string/to"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_days_availible2"
        app:layout_constraintTop_toBottomOf="@+id/tv_days_availible2" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/address_layout"
        android:background="@drawable/rounded_search_bar"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">
        <!--<fragment-->
            <!--android:id="@+id/place_autocomplete_fragment2"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_width="match_parent"-->
            <!--android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"-->
            <!--/>-->
    </LinearLayout>
    <SeekBar
        android:layout_width="364dp"
        android:layout_height="43dp"
        android:id="@+id/sb_rate" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_days_available6" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <TextView
        android:text="@string/_0"
        android:layout_width="64dp"
        android:layout_height="25dp"
        android:id="@+id/tv_rate"
        app:layout_constraintTop_toBottomOf="@+id/sb_rate" app:layout_constraintEnd_toEndOf="@+id/sb_rate"
        app:layout_constraintStart_toStartOf="@+id/sb_rate" app:layout_constraintHorizontal_bias="0.496"
        android:gravity="center"
        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_days_available">

        <CheckBox
            android:id="@+id/checkbox_monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monday" />

        <CheckBox
            android:id="@+id/checkbox_tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuesday" />

        <CheckBox
            android:id="@+id/checkbox_wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wednesday" />

        <CheckBox
            android:id="@+id/checkbox_thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thursday" />

        <CheckBox
            android:id="@+id/checkbox_friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friday" />

        <CheckBox
            android:id="@+id/checkbox_saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saturday" />

        <CheckBox
            android:id="@+id/checkbox_sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunday" />


    </LinearLayout>
    <Button
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_next"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_rate" app:layout_constraintVertical_bias="0.0"/>


</android.support.constraint.ConstraintLayout>