<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.RegisterActivity" tools:layout_editor_absoluteY="81dp"
        android:background="@android:color/darker_gray">

    <Button
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_register"
            app:layout_constraintStart_toStartOf="@+id/tv_already_have_account" android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp" app:layout_constraintTop_toBottomOf="@+id/et_name"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/tv_already_have_account"/>

    <EditText android:id="@+id/et_register_email"
              android:layout_width="0dp"
              android:layout_height="40dp"
              android:inputType="textEmailAddress"
              android:hint="@string/email"
              tools:ignore="Autofill"
              android:background="@drawable/rounded_edittext_login_register"
              android:paddingLeft="10dp"
              android:paddingRight="10dp"
              android:layout_marginTop="37dp" android:layout_marginBottom="8dp"
              app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/et_register_password"
              app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginLeft="35dp" android:layout_marginStart="35dp" android:layout_marginEnd="35dp"
              android:layout_marginRight="35dp"/>

    <EditText android:id="@+id/et_register_password"
              android:layout_width="0dp"
              android:layout_height="40dp"
              android:inputType="textPassword"
              android:hint="@string/password"
              tools:ignore="Autofill"
              android:background="@drawable/rounded_edittext_login_register"
              android:paddingLeft="10dp"
              android:paddingRight="10dp"
              app:layout_constraintTop_toBottomOf="@+id/et_register_email"
              android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintBottom_toTopOf="@+id/et_name" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginLeft="35dp" android:layout_marginStart="35dp" android:layout_marginEnd="35dp"
              android:layout_marginRight="35dp"/>
    <TextView
            android:text="@string/already_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_already_have_account"
            app:layout_constraintTop_toBottomOf="@+id/btn_register" android:layout_marginBottom="154dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/et_name"
            android:hint="@string/name"
            tools:ignore="Autofill"
            android:background="@drawable/rounded_edittext_login_register"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintTop_toBottomOf="@+id/et_register_password"
            android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_register" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="35dp" android:layout_marginStart="35dp" android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp" app:layout_constraintHorizontal_bias="0.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>